# geropharm

./: README.md  pyproject.toml
chem/: 2_SAR.ipynb  3_hit-list.ipynb
chem/data/: IC50.csv  clean_subset.csv  data_clean.smi  data_clean_SA_MCE-18.csv  data_clean_filtered.csv  data_clean_filtered_descriptors.csv  hit_list.csv  ic50_clean.csv  input_library.smi  scores.csv  selection.csv  selection.smi  swissadme.csv
chem/data/mmp/: actives.smi  all_rules.tsv  props.tsv  ruleenv_r1.tsv  top_rules.csv
chem/docs/: testcase.md  Тестовое задание_ Хемоинформатик.docx
chem/utils/: ChemSpace.py
ml/: testcase.md  tox_dataset.csv  Тестовое задание_ ML инженер.docx
