[project]
name = "geropharm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.3",
    "datamol>=0.12.5",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "medchem>=2.0.5",
    "mmpdb>=3.1.3",
    "molbokeh>=1.0.1",
    "mols2grid>=2.0.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
